--- a/ClothesShop/Views/Shared/_Sidebar.cshtml
+++ b/ClothesShop/Views/Shared/_Sidebar.cshtml
@@ -31,7 +31,7 @@
         margin-left: 5px;
     }
 </style>
-<nav id="sidebar" class="sidebar js-sidebar pull-right">
+<nav id="sidebar" class="sidebar js-sidebar pull-right collapsed">
     <div class="sidebar-content js-simplebar">
         <a class="sidebar-brand sidebar-link" href="@Url.Action("Index", "Home", new { area = ""})">
             <img src="~/Images/logo.png" style="height:50px;" />
