--- a/ClothesShop/Views/TodayTransactions/Index.cshtml
+++ b/ClothesShop/Views/TodayTransactions/Index.cshtml
@@ -121,6 +121,7 @@
                 "grid_data_url": "@Url.Action("GetAll", "TodayTransactions")",
                 "grid_height":"calc(100vh - 420px)",
                 "week_summary_url": "@Url.Action("GetWeekSummary", "TodayTransactions")",
+                "start_date_val":"@ViewBag.StartDate",
                 "grid_captions": {
                     "product_name": "@Resources.Product",
                     "day_one":"@Resources.Saturday",
