--- a/ClothesShop/Areas/Settings/Views/Shared/_Layout.cshtml
+++ b/ClothesShop/Areas/Settings/Views/Shared/_Layout.cshtml
@@ -22,12 +22,19 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/common")
     <script>
-        $(function () {
-            if (CommonManager.Instance.IsMobileDevice()) {
-                $("#sidebar").removeClass("collapsed");
-                $("#sidebar").addClass("collapsed");
-                $("#sidebar").css("display", "block");
-            }
+        //$(function () {
+        //    if (CommonManager.Instance.IsMobileDevice()) {
+        //        $("#sidebar").removeClass("collapsed");
+        //        $("#sidebar").addClass("collapsed");
+        //        $("#sidebar").css("display", "block");
+        //    }
+        //});
+        $(document).ready(function () {
+            $('.content').click(function (e) {
+                if (!$("#sidebar").hasClass("collapsed")) {
+                    $("#sidebar").addClass("collapsed");
+                }
+            });
         });
     </script>
 </head>
