--- a/ClothesShop/Views/Delivery/Create.cshtml
+++ b/ClothesShop/Views/Delivery/Create.cshtml
@@ -43,6 +43,7 @@
                 "page_info": "@Resources.PageInfo",
                 "grid_captions": {
                 "id": "@Resources.Code",
+                "seller_name":"@Resources.SellerName",
                 "customer_name": "@Resources.CustomerName",
                 "address": "@Resources.Address",
                 "mobile_number": "@Resources.MobileNumber",
