--- a/ClothesShop/Views/EmployeeStatistics/Index.cshtml
+++ b/ClothesShop/Views/EmployeeStatistics/Index.cshtml
@@ -77,7 +77,7 @@
                 },
                 "url": "@Url.Action("GetAll", "EmployeeStatistics")",
                 "grid_captions": {
-                    "seller": "@Resources.Seller",
+                    "seller": "@Resources.SellerName",
                     "totally_delivered": "@Resources.TotallyDelivered",
                     "partialy_delivered": "@Resources.PartialyDelivered",
                     "new": "@Resources.New",
