--- a/ClothesShop/Views/Orders/Edit.cshtml
+++ b/ClothesShop/Views/Orders/Edit.cshtml
@@ -16,6 +16,7 @@
         @Html.HiddenFor(m => m.CustomerID)
         @Html.HiddenFor(model => model.Customer.ID)
         @Html.HiddenFor(model => model.ProductSeralized)
+        @Html.HiddenFor(model => model.PageID)
         @Html.ValidationSummary(true, "", new { @class = "form-label text-danger" })
 
         var currency = Resources.LE;
@@ -35,7 +36,7 @@
                 <button type="submit" class="btn btn-md btn-success" id="submit">
                     @Resources.Save
                 </button>
-                <a type="button" class="btn btn-md btn-primary pull-left" href="@Url.Action("Index", "Orders")">
+                <a type="button" class="btn btn-md btn-primary pull-left" href="@Url.Action("Index", "Orders",new { PageID = Model.PageID })">
                     @Resources.BackToList
                 </a>
             </div>
